More readability dark style fixes

--- a/public/less/themes/arc-green.less
+++ b/public/less/themes/arc-green.less
@@ -793,6 +793,9 @@
         background: none transparent;
         border: none;
     }
+    .footer .markdown-info {
+        color: inherit;
+    }
 }
 
 .file-comment {
